@@ -1,3 +1,8 @@
+2005-01-15  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Return the correct path and filename
+	  on --capture-image.
+
 2005-01-13  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Added Minolta DIMage Z2 (PictBridge).
